# matematika-diskrit-2-graf

src/: CMakeLists.txt  graph.c  graph.h  main.c
